syntax = "proto3";

package binary;

option go_package = "./proto/binary";

service BinaryService {
  rpc Create(CreateRequest) returns (Empty);
  rpc Change(ChangeRequest) returns (Empty);
  rpc Delete(DeleteRequest) returns (Empty);
  rpc Get(GetRequest)       returns (GetResponse);
}

message Empty {}

message CreateRequest {
  string metaInfo = 1;
  bytes  data     = 2;
}

message ChangeRequest {
  string metaInfo = 1;
  bytes  data     = 2;
}

message DeleteRequest {
  string metaInfo = 1;
}

message GetRequest {
  string metaInfo = 1;
}

message GetResponse {
  string metaInfo = 1;
  bytes  data     = 2;
}

/*
protoc --go_out=. --go_opt=paths=source_relative   --go-grpc_out=. --go-grpc_opt=paths=source_relative   pkg/proto/binary/binary.proto
*/
